[gd_scene load_steps=63 format=3 uid="uid://cmic438xapftt"]

[ext_resource type="Script" path="res://scripts/seeker.gd" id="1_omvw6"]
[ext_resource type="Texture2D" uid="uid://cam6yxm40qn3u" path="res://assets/map/Sprout Lands/Characters/Basic Charakter Spritesheet.png" id="3_paj0g"]
[ext_resource type="Texture2D" uid="uid://b50gmo18lad63" path="res://assets/seeker/tag_animation/0.png" id="4_sm5bu"]
[ext_resource type="Texture2D" uid="uid://drg55hw6iy1rd" path="res://assets/seeker/tag_animation/1.png" id="5_jqhji"]
[ext_resource type="Texture2D" uid="uid://8tg8c40hitdy" path="res://assets/seeker/tag_animation/2.png" id="6_8nqnr"]
[ext_resource type="Texture2D" uid="uid://d38d5rqsjegs5" path="res://assets/seeker/tag_animation/3.png" id="7_782tx"]
[ext_resource type="Texture2D" uid="uid://bd55sidhybd8y" path="res://assets/seeker/tag_animation/4.png" id="8_0goyk"]
[ext_resource type="Script" path="res://scripts/seeker_ui.gd" id="8_bsyfy"]
[ext_resource type="FontFile" uid="uid://dyxv40j2au36r" path="res://fonts/Daydream.ttf" id="9_if4fv"]
[ext_resource type="Texture2D" uid="uid://cvu41if6o2g6i" path="res://assets/seeker/seeker_ui/dash_cooldown_ui.png" id="11_4dy5n"]
[ext_resource type="Texture2D" uid="uid://cvl4wk0dbgjxg" path="res://assets/seeker/seeker_ui/dash_ui.png" id="12_e0nyg"]
[ext_resource type="Texture2D" uid="uid://dbwkp8msivvo8" path="res://assets/dust_trail.png" id="13_nkyto"]
[ext_resource type="Texture2D" uid="uid://ddb0ls5k6arvs" path="res://assets/seeker/seeker_ui/tag_ui_under.png" id="13_u6ofp"]
[ext_resource type="Texture2D" uid="uid://bwvv1jdxpewwq" path="res://assets/seeker/seeker_ui/tag_ui_progress.png" id="14_7npgr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejbtt"]
size = Vector2(8, 3)

[sub_resource type="Gradient" id="Gradient_oiwp6"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1c3oj"]
gradient = SubResource("Gradient_oiwp6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rvfcs"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 2.0
angle_min = 1.07288e-05
angle_max = 1.07288e-05
gravity = Vector3(0, 5, 0)
scale_min = 0.04
scale_max = 0.04
color_ramp = SubResource("GradientTexture1D_1c3oj")

[sub_resource type="SpriteFrames" id="SpriteFrames_bpooi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_sm5bu")
}, {
"duration": 1.0,
"texture": ExtResource("5_jqhji")
}, {
"duration": 1.0,
"texture": ExtResource("6_8nqnr")
}, {
"duration": 1.0,
"texture": ExtResource("7_782tx")
}, {
"duration": 1.0,
"texture": ExtResource("8_0goyk")
}],
"loop": false,
"name": &"tag",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ooe26"]
atlas = ExtResource("3_paj0g")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u2wr"]
atlas = ExtResource("3_paj0g")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7btgp"]
atlas = ExtResource("3_paj0g")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7qtf"]
atlas = ExtResource("3_paj0g")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_giryn"]
atlas = ExtResource("3_paj0g")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra7ry"]
atlas = ExtResource("3_paj0g")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_67qu0"]
atlas = ExtResource("3_paj0g")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdeh7"]
atlas = ExtResource("3_paj0g")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3mij"]
atlas = ExtResource("3_paj0g")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl8d6"]
atlas = ExtResource("3_paj0g")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg00p"]
atlas = ExtResource("3_paj0g")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8da1"]
atlas = ExtResource("3_paj0g")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_af5ut"]
atlas = ExtResource("3_paj0g")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a0va"]
atlas = ExtResource("3_paj0g")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrn4v"]
atlas = ExtResource("3_paj0g")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc5nb"]
atlas = ExtResource("3_paj0g")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_hoodn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooe26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u2wr")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7btgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7qtf")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_giryn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra7ry")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67qu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdeh7")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3mij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl8d6")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg00p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8da1")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_af5ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a0va")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrn4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc5nb")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qst01"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j3e8v"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_33y6u"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rmcg5"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2cccd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qst01")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_j3e8v")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_33y6u")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rmcg5")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.1, -1)
max_space = Vector2(1.1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bstc4"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ixosv"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_url5s"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wn4wg"]
animation = &"run_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ja4my"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bstc4")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ixosv")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_url5s")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_wn4wg")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.1, -1)
max_space = Vector2(1.1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4s7jw"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ucmme"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jhps8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_w6n61"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_2cccd")
states/Idle/position = Vector2(307, 144)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_ja4my")
states/Run/position = Vector2(307, 42)
states/Start/position = Vector2(174, 119)
transitions = ["Run", "Idle", SubResource("AnimationNodeStateMachineTransition_4s7jw"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_ucmme"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_jhps8")]

[sub_resource type="Animation" id="Animation_w1byq"]
resource_name = "idle-down"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_60b6h"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_jwhnu"]
resource_name = "idle_side"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_1n3cp"]
resource_name = "idle_up"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_q3xjy"]
resource_name = "run_down"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_wt3lm"]
resource_name = "run_left"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_hn8cn"]
resource_name = "run_side"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_58lk6"]
resource_name = "run_up"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("seeker_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("seeker_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vads7"]
_data = {
"idle_down": SubResource("Animation_w1byq"),
"idle_left": SubResource("Animation_60b6h"),
"idle_right": SubResource("Animation_jwhnu"),
"idle_up": SubResource("Animation_1n3cp"),
"run_down": SubResource("Animation_q3xjy"),
"run_left": SubResource("Animation_wt3lm"),
"run_right": SubResource("Animation_hn8cn"),
"run_up": SubResource("Animation_58lk6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p2n8g"]
radius = 20.0

[sub_resource type="LabelSettings" id="LabelSettings_rtvca"]
font = ExtResource("9_if4fv")
font_size = 30

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6qihk"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="seeker" type="CharacterBody2D" groups=["seeker"]]
z_index = 1
motion_mode = 1
script = ExtResource("1_omvw6")

[node name="seeker_camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="dash_stock_cooldown" type="Timer" parent="."]
wait_time = 5.0

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="dash_duration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="tag_cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="tag_duration" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="seeker_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_ejbtt")

[node name="seeker_dust_trail" type="GPUParticles2D" parent="."]
position = Vector2(0, 6)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_rvfcs")
texture = ExtResource("13_nkyto")
lifetime = 0.5
speed_scale = 2.0

[node name="seeker_tag_animsprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bpooi")
animation = &"tag"
frame = 4
frame_progress = 1.0

[node name="seeker_animsprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hoodn")
animation = &"idle_left"
frame = 1

[node name="seeker_animtree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_w6n61")
anim_player = NodePath("../seeker_animplayer")
parameters/conditions/idle = false
parameters/conditions/run = false
parameters/Idle/blend_position = Vector2(-1.1, -0.0106384)
parameters/Run/blend_position = Vector2(0, 0)

[node name="seeker_animplayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_vads7")
}

[node name="seeker_tag_area" type="Area2D" parent="."]

[node name="seeker_tag_area_collision" type="CollisionShape2D" parent="seeker_tag_area"]
shape = SubResource("CircleShape2D_p2n8g")
disabled = true

[node name="seeker_ui" type="CanvasLayer" parent="."]
script = ExtResource("8_bsyfy")

[node name="ui_dash_stock" type="Label" parent="seeker_ui"]
offset_left = 576.0
offset_top = 568.0
offset_right = 604.0
offset_bottom = 609.0
text = "2"
label_settings = SubResource("LabelSettings_rtvca")

[node name="ui_center" type="CenterContainer" parent="seeker_ui"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -128.0
offset_right = -274.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3.5, 3.5)
size_flags_vertical = 4

[node name="ui_cooldowns" type="HBoxContainer" parent="seeker_ui/ui_center"]
layout_mode = 2

[node name="ui_dash" type="TextureProgressBar" parent="seeker_ui/ui_center/ui_cooldowns"]
layout_mode = 2
max_value = 1.5
step = 0.0
value = 1.5
fill_mode = 4
texture_under = ExtResource("11_4dy5n")
texture_progress = ExtResource("12_e0nyg")

[node name="ui_dash_timer" type="Timer" parent="seeker_ui/ui_center/ui_cooldowns/ui_dash"]
wait_time = 0.1
autostart = true

[node name="ui_tag" type="TextureProgressBar" parent="seeker_ui/ui_center/ui_cooldowns"]
layout_mode = 2
max_value = 3.0
step = 0.0
value = 3.0
fill_mode = 4
texture_under = ExtResource("13_u6ofp")
texture_progress = ExtResource("14_7npgr")

[node name="ui_tag_timer" type="Timer" parent="seeker_ui/ui_center/ui_cooldowns/ui_tag"]
wait_time = 0.1
autostart = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6qihk")

[connection signal="timeout" from="dash_stock_cooldown" to="." method="_on_dash_stock_cooldown_timeout"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="dash_duration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="tag_cooldown" to="." method="_on_tag_cooldown_timeout"]
[connection signal="timeout" from="tag_duration" to="." method="_on_tag_duration_timeout"]
[connection signal="timeout" from="seeker_ui/ui_center/ui_cooldowns/ui_dash/ui_dash_timer" to="seeker_ui" method="_on_ui_dash_timer_timeout"]
[connection signal="timeout" from="seeker_ui/ui_center/ui_cooldowns/ui_tag/ui_tag_timer" to="seeker_ui" method="_on_ui_tag_timer_timeout"]
